@@ -90,7 +90,12 @@
       
     <h3>Latest release</h3>
 
-      <p>There is currently no separate development release.</p>
+      <!--<p>There is currently no separate development release.</p>-->      
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.9/tomboy-0.9.4.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.9.4</a></div>
       
     <h3>Past releases</h3>
       <div class="download">
