@@ -70,6 +70,18 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+
+	    <h3>January 14th 2008</h3>
+   	      Happy new year!  <b>Unstable</b> version 0.9.4 released!  New in this and previous 0.9.x releases:
+   	      <ul>
+   	        <li>Organize your notes into 'Notebooks'</li>
+   	        <li>Customizable template notes for each Notebook</li>
+   	        <li>New Insert Datetime Stamp addin</li>
+   	        <li>Experimental new Sketching addin (disabled by default; compile with --enable-sketching)</li>
+   	        <li>Improvements to bugzilla addin, HTML export addin, synchronization, and our D-BUS interface</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_9_4/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
 	    
 	    <h3>October 15th 2007</h3>
    	      Stable version 0.8.1 released! Bugfixes since previous stable
