@@ -1,3 +1,8 @@
+2008-01-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.9.4 release.
+	* download.html: Ditto.
+
 2007-12-01  Ricky Zhou  <ricky.zhou@gmail.com>
 	* index.html: Fix closing li tag, as mentioned in bug #500918.  
 
